--- a/portfolio/Veliki/app/scss/_media.scss
+++ b/portfolio/Veliki/app/scss/_media.scss
@@ -1,21 +1,131 @@
 
 // ≥1200px
 @media screen and (max-width: 1200px) {
-	
+	 #home {
+	 	background-position: 50% 0;
+	 }
 }
 
 // ≥992px
 @media screen and (max-width: 992px) {
-
+   #header .numbers {
+   	margin-left: 15px;
+   }
+   #header .logo a {
+   	width: 146px;
+   	height: 88px;
+   }
+   #home .left_txt {
+   	padding-bottom: 100px;
+   }
 }
 
 // ≥768px
 @media screen and (max-width: 768px) {
-
+    #video iframe {
+    	width: 100%;
+    	height: 300px;
+    }
+    #header .time {
+    	display: none;
+    }
+    #home .place {
+    	flex-direction: column;
+    }
+    #home .place .block {
+    	width: 100%;
+    	display: flex;
+    	align-items: center;
+    }
+    #home .left_txt {
+    	padding-bottom: 50px;
+    }
+    #home {
+	 	background-position: 60% 0;
+	 }
+	 #home .container {
+	 	min-height: 760px;
+	 }
+	 #home .overlay {
+	 	 display: block;
+	 }
+	 #popup .content {
+	 	width: 400px;
+	 	height: auto;
+	 	padding-bottom: 15px;
+	 }
+	 #popup .content .top, #popup .content .bottom {
+	 	font-size: 1.8em;
+	 	padding-left: 15px;
+	 	padding-right: 15px;
+	 }
 }
 
 // ≥576px
 @media screen and (max-width: 576px) {
+       #popup .content {
+	 	width: 280px;
+	 }
+}
 
+@media screen and (max-width: 480px) {
+     #home .socials {
+     	padding-top: 10px;
+     }
+     #home .socials {
+     	align-self: center;
+     }
+     #header .logo a {
+     	  height: 70px;
+     	  width: 120px;
+     }
+     #home .container {
+     	height: auto;
+     	max-height: 1000px;
+     }
+     #home .left_txt h5, #home .left_txt h4 {
+     	font-size: 2.5em;
+     	text-align: center;
+     }
+     #header .logo a {
+     	height: 60px;
+     }
+     #header .numbers .icon, #header .time .icon {
+     	font-size: 2em;
+     }
+     h6 {
+     	font-size: 2.4em;
+     }
+     #video iframe {
+    	height: 150px;
+    }
+    #park .content .block .btn {
+    	width: 80%;
+    }
+    #park .content .block .description {
+    	font-size: 1.6em;
+    }
+    .owl-nav.disabled + .owl-dots {
+    	bottom: -10px;
+    }
+    #home .left_txt ul {
+    	font-size: 1.6em;
+    }
+    #home .left_txt h5, #home .left_txt h4 {
+    	font-size: 2em;
+    }
+    #how .map_content {
+    	height: 200px !important;
+    }
+    #park .content .block .btn {
+    	padding-left: 10px;
+    	padding-right: 10px;
+    }
+    #home .left_txt {
+    	padding-bottom: 20px;
+    }
+    #home .container {
+    	min-height: 0;
+    }
 }
 
