--- a/portfolio/Veliki/app/scss/_media.scss
+++ b/portfolio/Veliki/app/scss/_media.scss
@@ -26,9 +26,6 @@
     	width: 100%;
     	height: 300px;
     }
-    #header .time {
-    	display: none;
-    }
     #home .place {
     	flex-direction: column;
     }
@@ -43,9 +40,6 @@
     #home {
 	 	background-position: 60% 0;
 	 }
-	 #home .container {
-	 	min-height: 760px;
-	 }
 	 #home .overlay {
 	 	 display: block;
 	 }
@@ -59,6 +53,29 @@
 	 	padding-left: 15px;
 	 	padding-right: 15px;
 	 }
+     #header header {
+        flex-direction: column;
+        height: auto;
+     }
+     #header .logo {
+        position: relative;
+        margin-bottom: 15px;
+     }
+     #header .numbers, #header .time {
+        margin-bottom: 15px;
+     }
+     #header {
+        position: relative;
+     }
+     #home .container {
+        padding-top: 0;
+        height: auto;
+     }
+     #home .socials {
+        width: 100%;
+        margin-top: 30px;
+        padding: 0 15px; 
+     }
 }
 
 // ≥576px
