--- a/portfolio/Veliki/app/scss/_media.scss
+++ b/portfolio/Veliki/app/scss/_media.scss
@@ -18,6 +18,12 @@
    #home .left_txt {
    	padding-bottom: 100px;
    }
+   #home .container {
+    height: auto;
+   }
+   #home .socials {
+    padding-top: 40px;
+   }
 }
 
 // ≥768px
@@ -69,7 +75,6 @@
      }
      #home .container {
         padding-top: 0;
-        height: auto;
      }
      #home .socials {
         width: 100%;
