--- a/portfolio/CSA/app/scss/last.scss
+++ b/portfolio/CSA/app/scss/last.scss
@@ -246,7 +246,7 @@
                             background: rgba(0, 0, 0, 0.7);
                             position: relative;
                             p {
-                            	text-align: center;
+                                text-align: center;
                             }
                             h6 {
                                 font: 1.5em "HelveticaNeueCyrRoman";
@@ -298,212 +298,234 @@
                     }
                 }
             }
-            .slide4 {
-            	.content {
-            		display: flex;
-            		height: 100%;
-            		justify-content: space-between;
-            		.left_block, .right_block {
-                     width: 28%;
-                     height: 100%;
-            		}
-            		.center_block	{
-                    width: 40%;
-                    height: 100%;
-                    h5 {
-                    	font: 3em "HelveticaNeueCyrBold";
-                    	color: #fff;
-                    	margin: 0;
-                    	text-align: center;
-                    	padding-bottom: 0.3em;
+            .slide5 {
+                position: relative;
+                .btn_bottom {
+                    display: block;
+                    background: url(../img/arrow_bottom.png);
+                    width: 32px;
+                    height: 17px;
+                    cursor: pointer;
+                    position: absolute;
+                    bottom: 0;
+                    left: 50%;
+                    transform: translateX(-50%);
+                }
+                .slider_gallery {
+                    height: 480px;
+                    overflow: hidden;
+                    .slide {
+                        height: 150px;
+                        margin: 0;
+                        margin-bottom: 15px;
+                        width: 100%;
+                        border: none;
                     }
-                    .date {
-                    	font: 1.2em "HelveticaNeueCyrMedium";
-                    	color: #f5ed4a;
-                    	margin: 0;
-                    	padding-bottom: 1em;
-                    	text-align: center;
-                    }
-                    .head {
-                    	position: relative;
-                    	display: flex;
-                    	height: 30px;
-                    	align-items: center;
-                    	.option {
-                    		font: 1em "HelveticaNeueCyrMedium";
-                    		color: #f5ed4a;
-                    		text-transform: uppercase;
-                    		cursor: pointer;
-                    		text-align: center;
-                    	}
-                    	.option1 {
-                    		width: 15%;
-                    	}
-                    	.option2 {
-                    		width: 25%;
-                    	}
-                      .option3 {
-                    		width: 10%;
-                    	}
-                    	.option5, .option4 {
-                    		width: 25%;
-                    	}
-                    	.line {
-                    		display: block;
-                    		height: 3px; 
-                    		width: 100%;
-                    		position: absolute;
-                    		background: #f5ed4a;
-                    		bottom: 0;
-                    	}
-                    }
-                    .arrow_bottom {
-                    	position: absolute;
-                    	bottom: 0;
-                    	cursor: pointer;
-                    	display: block;
-                    	background: url(../img/arrow_bottom.png);
-                    	width: 32px;
-                    	height: 17px;
-                    	left: 50%;
-                    	transform: translateX(-50%);
-                    }
-                    .slider_statistic {
-                    	margin: 0 -15px;
-                        .slide {
-                              border-top: 1px solid #fff;
-                              height: 40px;
-                              box-sizing: border-box;
-                              margin: -1px 15px;
-                              display: flex;
-                              align-items: center;
-                              .slide_content {
-                              	display: flex;
-                              	align-items: center;
-                              	width: 100%;
-                              	  .number {
-                              	  	display: flex;
-                              	  	justify-content: center;
-                              	  	width: 15%;
-                              	  	p {
-                              	  		font: 0.9em "HelveticaNeueCyrMedium";
-                              	  	color: #fff;
-                              	  	}
-                              	  }
-                              	  .team {
-                              	  	display: flex;
-                              	  	justify-content: center;
-                              	  	width: 25%;
-                              	  	p {
-                              	  		font: 0.9em "HelveticaNeueCyrBold";
-                              	  		color: #fff;
-                              	  		text-transform: uppercase;
-                              	  		white-space: nowrap;
-                              	  		padding-left: 10px;
-                              	  	}
-                              	  }
-                              	  .game {
-                              	  	display: flex;
-                              	  	justify-content: center;
-                              	  	width: 10%;
-                              	  	img{}
-                              	  }
-                              	  .money {
-                              	  	display: flex;
-                              	  	justify-content: center;
-                              	  	width: 25%;
-                              	  	p {
-                              	  		font: 0.9em "HelveticaNeueCyrMedium";
-                              	  		color: #fff;
-                              	  		white-space: nowrap;
-                              	  	}
-                              	  }
-                              	  .avards {
-                              	  	display: flex;
-                              	  	justify-content: center;
-                              	  	width: 25%;
-                              	  }
-                              }
+                    .slide_first {
+                        display: flex;
+                        justify-content: space-between;
+                        .block_left {
+                            width: 20%;
+                            h6 {
+                                font: 3em "HelveticaNeueCyrBold";
+                                margin: 0;
+                                color: #fff;
+                                line-height: 0.8em;
+                            }
+                            .date {
+                                font: 1.2em "HelveticaNeueCyrMedium";
+                                color: #f4ea48;
+                                margin: 5px 0;
+                                padding-bottom: 5px;
+                            }
+                            ul {
+                                list-style: none;
+                                margin: 0;
+                                padding: 0;
+                                a {
+                                    color: #fff;
+                                    text-decoration: none;
+                                    font: 1.4em "HelveticaNeueCyrMedium";
+                                    span {
+                                        color: #f4ea48;
+                                    }
+                                }
+                            }
+                            .photo {
+                                font: 2em "HelveticaNeueCyrBold";
+                                color: #fff;
+                                line-height: 0.8em;
+                                margin: 0;
+                                padding-top: 0.5em;
+                                text-align: right;
+                            }
+                        }
+                        .center_block {
+                            position: relative;
+                            width: 60%;
+                            padding: 0 15px;
+                            span {
+                                position: absolute;
+                                display: block;
+                                width: 40px;
+                                height: 100%;
+                                cursor: pointer;
+                                transition: .1s;
+                                z-index: 2;
+                            }
+                            .arrow_left_photo {
+                                left: 15px;
+                                background: url(../img/arrow_left.png) no-repeat center center;
+                                background-color: rgba(0, 0, 0, 0.5);
+                                &:hover {
+                                    background-color: rgba(0, 0, 0, 0.7);
+                                }
+                            }
+                            .arrow_right_photo {
+                                right: 15px;
+                                background: url(../img/arrow_right.png) no-repeat center center;
+                                background-color: rgba(0, 0, 0, 0.5);
+                                &:hover {
+                                    background-color: rgba(0, 0, 0, 0.7);
+                                }
+                            }
+                            .photo_slider {
+                                width: 100%;
+                                height: 100%;
+                                .slick-list {
+                                    height: 100%;
+                                }
+                                .slide {
+                                    height: 100%;
+                                    margin: 0;
+                                    img {
+                                        width: 100%;
+                                        height: auto;
+                                    }
+                                }
+                            }
+                        }
+                        .right_block {
+                            position: relative;
+                            width: 20%;
+                            .img {
+                                height: 100%;
+                                overflow: hidden;
+                                position: relative;
+                                img {
+                                    position: relative;
+                                    z-index: 1;
+                                    height: 100%;
+                                }
+                                .overlay {
+                                    width: 100%;
+                                    display: block;
+                                    height: 100%;
+                                    position: absolute;
+                                    z-index: 2;
+                                    background: rgba(0, 0, 0, 0.4);
+                                    left: 0;
+                                    top: 0;
+                                }
+                            }
+                            .logo {
+                                position: absolute;
+                                z-index: 3;
+                                left: 50%;
+                                top: 50%;
+                                transform: translate(-50%, -50%);
+                            }
+                            .txt {
+                                position: absolute;
+                                bottom: 8px;
+                                z-index: 2;
+                                width: 100%;
+
+                                p {
+                                    font: 1.6em "HelveticaNeueCyrBold";
+                                    color: #f4ea48;
+                                    text-align: center;
+                                    margin: 0;
+                                }
+                            }
+                            .line {
+                                height: 3px;
+                                width: 100%;
+                                position: absolute;
+                                bottom: 0;
+                                background-color: #f4ea48;
+                                z-index: 4;
+                            }
                         }
                     }
-            		}
-            		.left_block, .right_block {
-            			display: flex;
-            			flex-direction: column;
-            			justify-content: space-between;
-            			.block_team {
-            				height: 48%;
-            				.img {
-            					overflow: hidden;
-            					height: 60%;
-            					img {
-            						width: 100%;
-            					}
-            				}
-            				.logo {
-            					height: 5%;
-            					background: #f4ea48;
-            					position: relative;
-            					img {
-            						position: absolute;
-            						height: 60px;
-            						left: 50%;
-            						top: 50%;
-            						transform: translate(-50%, -50%);
-            					}
-            				}
-            				.bottom_container {
-            					height: 35%;
-            					background: rgba(0, 0, 0, 0.8);
-            					display: flex;
-            					justify-content: space-between;
-            					.left_sect, .right_sect {
-            						padding: 0 10px;
-                          .title {
-                          	font: 1em "HelveticaNeueCyrMedium";
-                          	margin: 0;
-                          	color: #f4ea48;
-                          	text-align: center;
-                          	padding-top: 0.5em;
-                          	padding-bottom: 0.5em;
-                          }
-                          .desc {
-                          	font: 1.2em "HelveticaNeueCyrMedium";
-                          	text-align: center;
-                          	color: #fff;
-                          	margin: 0;
-                          	padding-bottom: 0.5em;
-                          }
-                          img {
-                          	display: block;
-                          	width: 35px;
-                          	height: 35px;
-                          	margin: 0 auto;
-                          }
-            					}
-            					.center_sect {
-            						display: flex;
-            						flex-direction: column;
-            						justify-content: flex-end;
-            						h5 {
-            							font: 1.6em "HelveticaNeueCyrBold";
-            							color: #f4ea48;
-            							margin: 0;
-            							text-align: center;
-            							padding-bottom: 0.3em;
-            						}
-            						p {
-            							font: 1.2em "HelveticaNeueCyrMedium";
-            							color: #fff;
-            							text-align: center;
-            							margin: 0;
-            							padding-bottom: 1em;
-            						}
-            					}
-            				}
-            			}
-            		}
-            	}
+                    .cards {
+                        display: flex;
+                        justify-content: space-between;
+                        .block_left, .block_right {
+                            width: 48%;
+                            height: 100%;
+                            display: flex;
+                            .desc {
+                                width: 35%;
+                                background: rgba(0, 0, 0, 0.5);
+                                height: 100%;
+                                margin-right: 15px;
+                                h6 {
+                                    font: 1.5em "HelveticaNeueCyrRoman";
+                                    margin: 0;
+                                    text-transform: uppercase;
+                                    text-align: center;
+                                    color: #fff;
+                                    padding-top: 0.6em;
+                                    strong {
+                                        font-family: "HelveticaNeueCyrBold";
+                                    }
+                                }
+                                img {
+                                    display: block;
+                                    width: 30px;
+                                    height: 30px;
+                                    margin: 10px auto;
+                                }
+                                .title {
+                                    font: 1.2em "HelveticaNeueCyrMedium";
+                                    color: #f4ea48;
+                                    margin: 0;
+                                    text-align: center;
+                                    padding-bottom: 0.2em;
+                                }
+                                .date {
+                                    font: 1.4em "HelveticaNeueCyrMedium";
+                                    color: #fff;
+                                    margin: 0;
+                                    text-transform: uppercase;
+                                    padding-bottom: 0.5em;
+                                    text-align: center;
+                                }
+                            }
+                            .img_block {
+                                width: 65%;
+                                height: 100%;
+                                overflow: hidden;
+                                position: relative;
+                                img {
+                                    width: 100%;
+                                    height: auto;
+                                    position: absolute;
+                                    left: 50%;
+                                    top: 50%;
+                                    transform: translate(-50%, -50%);
+                                }
+                            }
+                        }
+                        .block_right {
+                            .desc {
+                                margin-right: 0;
+                                margin-left: 15px;
+                            }
+                        }
+                    }
+                }
             }
         }
     }
