--- a/portfolio/Barbershop/app/css/dop.css
+++ b/portfolio/Barbershop/app/css/dop.css
@@ -9,7 +9,7 @@
 .bg_page_dop {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   background: url(../img/bg_dop_page.jpg) no-repeat center center;
   -webkit-background-size: cover;
           background-size: cover; }
