--- a/portfolio/Barbershop/app/scss/common.scss
+++ b/portfolio/Barbershop/app/scss/common.scss
@@ -27,6 +27,9 @@ body {
     padding: 0 15px;
 }
 
+.mobile_display {
+    height: 100% !important;
+}
 
 body {
     font-size: 3px;
@@ -43,7 +46,7 @@ p {
 }
 
 .bg_topgun {
-    position: absolute;
+    position: fixed;
     width: calc(100% - 30px);
     z-index: 2; 
     height: 100%;
