--- a/portfolio/Barbershop/app/scss/dop.scss
+++ b/portfolio/Barbershop/app/scss/dop.scss
@@ -11,7 +11,7 @@
 .bg_page_dop {
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     background: url(../img/bg_dop_page.jpg) no-repeat center center;
     background-size: cover;
 }
