--- a/portfolio/Barbershop/app/scss/main.scss
+++ b/portfolio/Barbershop/app/scss/main.scss
@@ -402,17 +402,19 @@
 }
 
 @media screen and (max-width: 567px) {
+    @media screen and (max-height: 550px) {
+         #home .container .tab_content .moscow_page .tab_content_block h2, #home .container .tab_content .spb_page .tab_content_block h2 {
+            margin: 0 !important;
+         }
+         #home .container .tab_content .moscow_page .tab_content_block .number .left, #home .container .tab_content .spb_page .tab_content_block .number .left {
+            margin-top: -15px;
+         }
+    }
     #home .container {
         min-height: 520px;
     }
-    #home .container .tab_content .moscow_page .tab_content_block .number .right .more, #home .container .tab_content .spb_page .tab_content_block .number .right .more {
-        padding-top: 0 !important;
-    }
     #home .container .tab_name {
         bottom: 15em !important;
-    }
-    #home .container .tab_content .moscow_page .tab_content_block h2, #home .container .tab_content .spb_page .tab_content_block h2 {
-        margin-top: 0 !important;
     }
     #home .container .tab_content .home_page .tab_content_block .number {
         padding-top: 0.07em;
@@ -517,9 +519,6 @@
     }
     #home .container .tab_content .reg_page .tab_content_block .number .right p {
         padding: 0;
-    }
-    #home .container .tab_content .reg_page .tab_content_block .number .right .more {
-        padding-top: 9em !important;
     }
     #home .container .tab_content .reg_page .tab_content_block .number .right {
         margin: 0;
