--- a/portfolio/Barbershop/app/css/common.css
+++ b/portfolio/Barbershop/app/css/common.css
@@ -41,7 +41,8 @@
 
 html {
   background: #101011;
-  min-width: 320px; }
+  min-width: 320px;
+  min-height: 520px; }
 
 body {
   overflow-x: hidden; }
@@ -58,7 +59,8 @@ body {
   padding: 0 15px; }
 
 .mobile_display {
-  height: 100% !important; }
+  height: 100% !important;
+  min-height: 520px !important; }
 
 body {
   font-size: 3px;
@@ -72,7 +74,7 @@ p {
   margin: 0; }
 
 .bg_topgun {
-  position: fixed;
+  position: absolute;
   width: -webkit-calc(100% - 30px);
   width: calc(100% - 30px);
   z-index: 2;
@@ -84,6 +86,9 @@ p {
     background: url(../img/bg_logo.png) no-repeat center center;
     -webkit-background-size: contain;
             background-size: contain; }
+
+.bg_topgun_active {
+  position: fixed; }
 
 .nav-btn {
   display: none;
