--- a/portfolio/Barbershop/app/css/main.css
+++ b/portfolio/Barbershop/app/css/main.css
@@ -475,15 +475,17 @@
   #home .container {
     min-height: 400px; } }
 
+@media screen and (max-width: 567px) and (max-height: 550px) {
+  #home .container .tab_content .moscow_page .tab_content_block h2, #home .container .tab_content .spb_page .tab_content_block h2 {
+    margin: 0 !important; }
+  #home .container .tab_content .moscow_page .tab_content_block .number .left, #home .container .tab_content .spb_page .tab_content_block .number .left {
+    margin-top: -15px; } }
+
 @media screen and (max-width: 567px) {
   #home .container {
     min-height: 520px; }
-  #home .container .tab_content .moscow_page .tab_content_block .number .right .more, #home .container .tab_content .spb_page .tab_content_block .number .right .more {
-    padding-top: 0 !important; }
   #home .container .tab_name {
     bottom: 15em !important; }
-  #home .container .tab_content .moscow_page .tab_content_block h2, #home .container .tab_content .spb_page .tab_content_block h2 {
-    margin-top: 0 !important; }
   #home .container .tab_content .home_page .tab_content_block .number {
     padding-top: 0.07em; }
   .bg_page_other .txt_bg .spb p {
@@ -590,8 +592,6 @@
     letter-spacing: 0.13em; }
   #home .container .tab_content .reg_page .tab_content_block .number .right p {
     padding: 0; }
-  #home .container .tab_content .reg_page .tab_content_block .number .right .more {
-    padding-top: 9em !important; }
   #home .container .tab_content .reg_page .tab_content_block .number .right {
     margin: 0;
     -webkit-align-self: center !important;
