--- a/portfolio/Barbershop/app/scss/common.scss
+++ b/portfolio/Barbershop/app/scss/common.scss
@@ -9,6 +9,7 @@
 html {
     background: #101011;
     min-width: 320px;
+    min-height: 520px;
 }
 
 body {
@@ -29,6 +30,7 @@ body {
 
 .mobile_display {
     height: 100% !important;
+    min-height: 520px !important;
 }
 
 body {
@@ -46,7 +48,7 @@ p {
 }
 
 .bg_topgun {
-    position: fixed;
+    position: absolute;
     width: calc(100% - 30px);
     z-index: 2; 
     height: 100%;
@@ -57,6 +59,10 @@ p {
     background: url(../img/bg_logo.png) no-repeat center center;
     background-size: contain;
     }
+}
+
+.bg_topgun_active {
+    position: fixed;
 }
 
 .nav-btn {
