--- a/portfolio/Barbershop/app/css/common.css
+++ b/portfolio/Barbershop/app/css/common.css
@@ -58,6 +58,9 @@ body {
   margin: 0 auto;
   padding: 0 15px; }
 
+.content_site .container {
+  height: 100vh; }
+
 .mobile_display {
   height: 100% !important;
   min-height: 520px !important; }
@@ -88,7 +91,7 @@ p {
             background-size: contain; }
 
 .bg_topgun_active {
-  position: fixed; }
+  position: fixed !important; }
 
 .nav-btn {
   display: none;
@@ -154,27 +157,6 @@ p {
   .nav-btn .a_active span {
     background-color: transparent !important; }
 
-#lang_block {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  position: absolute;
-  right: 3em;
-  top: 3em;
-  z-index: 10; }
-  #lang_block a {
-    display: block;
-    text-decoration: none;
-    color: #fff;
-    font: 6em "BebasNeueLight";
-    margin-left: 0.33em;
-    letter-spacing: 0.2em; }
-    #lang_block a:first-child {
-      margin-left: 0; }
-  #lang_block .active_lang {
-    font-family: "BebasNeueRegular"; }
-
 #header {
   position: absolute;
   width: 100%;
@@ -208,14 +190,26 @@ p {
         font: 9.8em "BebasNeueBook";
         color: #7a7f88;
         letter-spacing: 0.2em; }
-    #header .container .header_top .right {
+    #header .container .header_top #lang_block {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
       position: absolute;
-      right: 0;
-      background: url(../img/stopping-sales.png) no-repeat;
-      -webkit-background-size: contain;
-              background-size: contain;
-      width: 60.5em;
-      height: 25.3em; }
+      right: 0em;
+      top: 7.1em;
+      z-index: 10; }
+      #header .container .header_top #lang_block a {
+        display: block;
+        text-decoration: none;
+        color: #fff;
+        font: 6em "BebasNeueLight";
+        margin-left: 0.33em;
+        letter-spacing: 0.2em; }
+        #header .container .header_top #lang_block a:first-child {
+          margin-left: 0; }
+      #header .container .header_top #lang_block .active_lang {
+        font-family: "BebasNeueRegular"; }
 
 #navigation {
   display: -webkit-box;
@@ -258,7 +252,6 @@ p {
 
 #contacts_tab {
   height: 100%;
-  min-height: 100vh;
   position: relative;
   z-index: 3; }
   #contacts_tab .bg_all {
@@ -288,7 +281,6 @@ p {
     height: 176em; }
   #contacts_tab .container {
     position: relative;
-    height: 100%;
     z-index: 3;
     display: -webkit-box;
     display: -webkit-flex;
@@ -302,8 +294,7 @@ p {
     -webkit-box-pack: center;
     -webkit-justify-content: center;
         -ms-flex-pack: center;
-            justify-content: center;
-    min-height: 100vh; }
+            justify-content: center; }
     #contacts_tab .container .top {
       display: block;
       width: 100%;
@@ -369,9 +360,13 @@ p {
 
 @media screen and (min-width: 1520px) {
   body {
-    font-size: 4px; } }
+    font-size: 4px; }
+  .content_site .container, html, body, #wrapprer {
+    min-height: 1020px; } }
 
 @media screen and (max-width: 1519px) {
+  .content_site .container, html, body, #wrapprer {
+    min-height: 627px; }
   .container {
     max-width: 1200px; }
   #projects .container .home_page_projects .page_content .bottom_projects .projects_content .block p {
