--- a/portfolio/Barbershop/app/css/dop.css
+++ b/portfolio/Barbershop/app/css/dop.css
@@ -2,14 +2,11 @@
   position: relative;
   z-index: 2;
   height: 100%; }
-  #dop .container {
-    height: 100vh;
-    min-height: 624px; }
 
 .bg_page_dop {
   width: 100%;
   height: 100%;
-  position: fixed;
+  position: absolute;
   background: url(../img/bg_dop_page.jpg) no-repeat center center;
   -webkit-background-size: cover;
           background-size: cover; }
@@ -229,9 +226,7 @@
     margin-top: 0.3em; }
   #dop .container .dop_page .center_section h5 {
     margin-bottom: 0.2em;
-    margin-top: 0.3em; }
-  #dop .container {
-    min-height: 876px; } }
+    margin-top: 0.3em; } }
 
 @media screen and (max-width: 1519px) {
   #dop .container {
