--- a/portfolio/Barbershop/app/css/invest.css
+++ b/portfolio/Barbershop/app/css/invest.css
@@ -1,10 +1,6 @@
 #invest {
   position: relative;
   z-index: 2; }
-  #invest .container {
-    min-height: 100vh;
-    height: 100vh;
-    min-height: 624px; }
 
 .logo {
   position: relative; }
@@ -24,170 +20,193 @@
   -webkit-background-size: cover;
           background-size: cover; }
 
-#invest .container {
-  position: relative; }
-  #invest .container .invest_page {
-    height: 100%;
-    position: relative;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-flow: row wrap;
-        -ms-flex-flow: row wrap;
-            flex-flow: row wrap;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center; }
-    #invest .container .invest_page .bg {
-      position: absolute;
-      z-index: 1;
-      width: 100%;
-      height: 100%;
-      overflow: hidden; }
-      #invest .container .invest_page .bg .bg_image {
-        background: url(../img/bg_invest_2.png) no-repeat center top;
-        -webkit-background-size: contain;
-                background-size: contain;
+#invest {
+  height: 100%; }
+  #invest .container {
+    position: relative; }
+    #invest .container .invest_page {
+      position: relative;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -webkit-flex-flow: row wrap;
+          -ms-flex-flow: row wrap;
+              flex-flow: row wrap;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      height: 100%; }
+      #invest .container .invest_page .bg {
         position: absolute;
+        z-index: 1;
         width: 100%;
         height: 100%;
-        top: 30%;
-        z-index: 2; }
-  #invest .container .content {
-    position: relative;
-    z-index: 2;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100%;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    padding-top: 73em; }
-    #invest .container .content .left_section {
-      padding-top: 3.6em;
-      padding-left: 25em; }
-      #invest .container .content .left_section .top_item p {
-        font: 10.3em "BebasNeueBook";
-        color: #fff;
-        text-align: right;
-        line-height: 100%; }
-        #invest .container .content .left_section .top_item p .first {
-          font-family: "BebasNeueBold"; }
-        #invest .container .content .left_section .top_item p .last {
-          font-family: "BebasNeueRegular"; }
-        #invest .container .content .left_section .top_item p .second {
-          display: inline-block;
-          background: url(../img/rub.png) no-repeat center center;
+        overflow: hidden; }
+        #invest .container .invest_page .bg .bg_image {
+          background: url(../img/bg_invest_2.png) no-repeat center top;
           -webkit-background-size: contain;
                   background-size: contain;
-          width: 0.5em;
-          height: 0.5em; }
-      #invest .container .content .left_section .bottom_item p {
-        font: 5.5em "BebasNeueBold";
-        color: #fff;
-        letter-spacing: 0.2em;
-        padding-top: 1.5em;
-        padding-left: 0.3em; }
-        #invest .container .content .left_section .bottom_item p span {
-          font-family: "BebasNeueBook"; }
-    #invest .container .content .center_section {
-      text-align: center;
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          top: 30%;
+          z-index: 2; }
+    #invest .container .content {
       position: relative;
-      z-index: 1;
-      margin-left: 8em; }
-      #invest .container .content .center_section .bg_monet {
-        position: absolute;
-        background: url(../img/monet.png) no-repeat;
-        width: 68em;
-        height: 68em;
-        -webkit-background-size: contain;
-                background-size: contain;
-        left: -45%;
-        bottom: -5%; }
-      #invest .container .content .center_section .top_item p {
-        font: 16.3em "BebasNeueRegular";
-        color: #fff;
-        letter-spacing: 0.03em;
-        padding-left: 0.2em; }
-      #invest .container .content .center_section .center_item p {
-        color: #fff;
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex; }
-        #invest .container .content .center_section .center_item p .last {
-          font: 94.5em "BebasNeueBold";
-          line-height: 80%;
-          text-shadow: 0.05em 0px 0px #707070; }
-        #invest .container .content .center_section .center_item p .first {
-          font: 11.5em "BebasNeueRegular";
+      z-index: 2;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      width: 100%;
+      -webkit-box-pack: justify;
+      -webkit-justify-content: space-between;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
+      padding-top: 45em; }
+      #invest .container .content .left_section {
+        padding-top: 3.6em;
+        padding-left: 25em; }
+        #invest .container .content .left_section .top_item p {
+          font: 10.3em "BebasNeueBook";
+          color: #fff;
+          text-align: right;
           line-height: 100%; }
-        #invest .container .content .center_section .center_item p .second {
-          font: 18.1em "BebasNeueBold";
-          line-height: 100%; }
-      #invest .container .content .center_section .bottom_item {
-        margin-top: -6.5em; }
-        #invest .container .content .center_section .bottom_item .first {
-          font: 8.4em "BebasNeueRegular";
-          color: #fff;
-          letter-spacing: 0.21em;
-          padding-left: 0.8em; }
-        #invest .container .content .center_section .bottom_item .second {
-          font: 7em "BebasNeueBook";
-          color: #fff;
-          letter-spacing: 1.07em;
-          padding-left: 1.8em; }
-    #invest .container .content .right_section {
-      padding-top: 25em; }
-      #invest .container .content .right_section .top_item {
-        padding-right: 23em; }
-        #invest .container .content .right_section .top_item p {
-          font: 5.6em "BebasNeueBold";
-          color: #fff;
-          letter-spacing: 0.18em; }
-          #invest .container .content .right_section .top_item p .first {
-            font-family: "BebasNeueBook"; }
-          #invest .container .content .right_section .top_item p .second {
+          #invest .container .content .left_section .top_item p .first {
+            font-family: "BebasNeueBold"; }
+          #invest .container .content .left_section .top_item p .last {
             font-family: "BebasNeueRegular"; }
-      #invest .container .content .right_section .bottom_item {
-        padding-right: 12em; }
-        #invest .container .content .right_section .bottom_item .more {
-          font: 4.5em "BebasNeueBook";
-          letter-spacing: 0.1em;
-          text-align: right;
-          padding-top: 7em;
-          padding-bottom: 0.2em;
-          color: #fff; }
-        #invest .container .content .right_section .bottom_item .number {
-          font: 8em "BebasNeueRegular";
-          letter-spacing: 0.11em;
-          color: #464646;
-          text-align: right;
+          #invest .container .content .left_section .top_item p .second {
+            display: inline-block;
+            background: url(../img/rub.png) no-repeat center center;
+            -webkit-background-size: contain;
+                    background-size: contain;
+            width: 0.5em;
+            height: 0.5em; }
+        #invest .container .content .left_section .bottom_item p {
+          font: 5.5em "BebasNeueBold";
+          color: #fff;
+          letter-spacing: 0.2em;
+          padding-top: 1.5em;
+          padding-left: 0.3em; }
+          #invest .container .content .left_section .bottom_item p span {
+            font-family: "BebasNeueBook"; }
+      #invest .container .content .center_section {
+        text-align: center;
+        position: relative;
+        z-index: 1;
+        margin-left: 8em; }
+        #invest .container .content .center_section .bg_monet {
+          position: absolute;
+          background: url(../img/monet.png) no-repeat;
+          width: 68em;
+          height: 68em;
+          -webkit-background-size: contain;
+                  background-size: contain;
+          left: -45%;
+          bottom: -5%;
+          -webkit-animation: 30s linear 0s normal none infinite running rot;
+                  animation: 30s linear 0s normal none infinite running rot; }
+        #invest .container .content .center_section .top_item p {
+          font: 16.3em "BebasNeueRegular";
+          color: #fff;
+          letter-spacing: 0.03em;
+          padding-left: 0.2em; }
+        #invest .container .content .center_section .center_item p {
+          color: #fff;
           display: -webkit-box;
           display: -webkit-flex;
           display: -ms-flexbox;
-          display: flex;
-          -webkit-box-pack: end;
-          -webkit-justify-content: flex-end;
-              -ms-flex-pack: end;
-                  justify-content: flex-end; }
+          display: flex; }
+          #invest .container .content .center_section .center_item p .last {
+            font: 94.5em "BebasNeueBold";
+            line-height: 80%;
+            text-shadow: 0.05em 0px 0px #707070; }
+          #invest .container .content .center_section .center_item p .first {
+            font: 11.5em "BebasNeueRegular";
+            line-height: 100%; }
+          #invest .container .content .center_section .center_item p .second {
+            font: 18.1em "BebasNeueBold";
+            line-height: 100%; }
+        #invest .container .content .center_section .bottom_item {
+          margin-top: -6.5em; }
+          #invest .container .content .center_section .bottom_item .first {
+            font: 8.4em "BebasNeueRegular";
+            color: #fff;
+            letter-spacing: 0.21em;
+            padding-left: 0.8em; }
+          #invest .container .content .center_section .bottom_item .second {
+            font: 7em "BebasNeueBook";
+            color: #fff;
+            letter-spacing: 1.07em;
+            padding-left: 1.8em; }
+      #invest .container .content .right_section {
+        padding-top: 25em; }
+        #invest .container .content .right_section .top_item {
+          padding-right: 23em; }
+          #invest .container .content .right_section .top_item p {
+            font: 5.6em "BebasNeueBold";
+            color: #fff;
+            letter-spacing: 0.18em; }
+            #invest .container .content .right_section .top_item p .first {
+              font-family: "BebasNeueBook"; }
+            #invest .container .content .right_section .top_item p .second {
+              font-family: "BebasNeueRegular"; }
+        #invest .container .content .right_section .bottom_item {
+          padding-right: 12em; }
+          #invest .container .content .right_section .bottom_item .more {
+            font: 4.5em "BebasNeueBook";
+            letter-spacing: 0.1em;
+            text-align: right;
+            padding-top: 7em;
+            padding-bottom: 0.2em;
+            color: #fff; }
+          #invest .container .content .right_section .bottom_item .number {
+            font: 8em "BebasNeueRegular";
+            letter-spacing: 0.11em;
+            color: #fff;
+            text-align: right;
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-pack: end;
+            -webkit-justify-content: flex-end;
+                -ms-flex-pack: end;
+                    justify-content: flex-end; }
+
+@-webkit-keyframes rot {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg); }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg); } }
+
+@keyframes rot {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg); }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg); } }
 
 @media screen and (max-width: 1200px) {
   #invest .container {
     min-height: 624px; }
   #invest .container .content .center_section .bg_monet {
-    display: none; } }
+    width: 50em;
+    height: 50em;
+    left: -28%;
+    bottom: 0; } }
 
 @media screen and (max-width: 1023px) {
   #invest .container {
@@ -262,7 +281,27 @@
   .bg_page_other .txt_bg .invest .bg {
     display: none; }
   #invest .container .content .center_section .center_item p .last {
-    padding-top: 0.05em; } }
+    padding-top: 0.05em; }
+  #invest .container .content .center_section .bg_monet {
+    width: 30em;
+    height: 30em;
+    left: -8em;
+    bottom: 10em; } }
+
+@media screen and (max-width: 567px) and (max-height: 660px) {
+  #invest .container .content .center_section {
+    font-size: 0.7em;
+    padding-top: 50em; }
+  #invest .container .content {
+    padding-top: 0em;
+    height: 100%; } }
+
+@media screen and (max-width: 567px) and (max-height: 560px) {
+  #invest .container .content .center_section {
+    font-size: 0.5em;
+    padding-top: 70em; }
+  #home .container .tab_content .moscow_page .tab_content_block .number .center, #home .container .tab_content .spb_page .tab_content_block .number .center, #home .container .tab_content .reg_page .tab_content_block .number .center {
+    font-size: 0.7em; } }
 
 @media screen and (max-width: 400px) {
   #invest .container .content .left_section .top_item {
