--- a/portfolio/Barbershop/app/css/main.css
+++ b/portfolio/Barbershop/app/css/main.css
@@ -2,9 +2,6 @@
   position: relative;
   z-index: 2;
   height: 100%; }
-  #home .container {
-    height: 100vh;
-    min-height: 624px; }
 
 .bg_page_home {
   width: 100%;
@@ -161,7 +158,7 @@
         #home .container .tab_content .home_page .tab_content_block h2 {
           font: 9.5em "BebasNeueRegular";
           color: #fff;
-          padding-top: 5.6em; }
+          padding-top: 3em; }
           #home .container .tab_content .home_page .tab_content_block h2 span {
             font-family: "BebasNeueBook"; }
         #home .container .tab_content .home_page .tab_content_block .number {
@@ -214,7 +211,7 @@
           color: #fff;
           letter-spacing: 1.5em;
           padding-left: 1.5em;
-          padding-top: 7em; }
+          padding-top: 3em; }
           #home .container .tab_content .moscow_page .tab_content_block h2 span,
           #home .container .tab_content .spb_page .tab_content_block h2 span,
           #home .container .tab_content .reg_page .tab_content_block h2 span {
@@ -291,7 +288,7 @@
               #home .container .tab_content .spb_page .tab_content_block .number .right p .numb,
               #home .container .tab_content .reg_page .tab_content_block .number .left p .numb,
               #home .container .tab_content .reg_page .tab_content_block .number .right p .numb {
-                font: 22em "BebasNeueBold";
+                font: 30em "BebasNeueBold";
                 letter-spacing: 0em; }
               #home .container .tab_content .moscow_page .tab_content_block .number .left p .right_item,
               #home .container .tab_content .moscow_page .tab_content_block .number .right p .right_item,
@@ -315,7 +312,7 @@
                 -webkit-background-size: contain;
                         background-size: contain;
                 position: absolute;
-                top: 7em; }
+                top: 13em; }
           #home .container .tab_content .moscow_page .tab_content_block .number .left,
           #home .container .tab_content .spb_page .tab_content_block .number .left,
           #home .container .tab_content .reg_page .tab_content_block .number .left {
@@ -388,8 +385,9 @@
       color: #fff;
       letter-spacing: 0em;
       padding-left: 0.5em;
-      padding-top: 2.3em;
-      padding-bottom: 0.3em; }
+      padding-top: 1.15em;
+      padding-bottom: 0em;
+      margin-bottom: 0; }
       #home .container .tab_content .reg_page .tab_content_block h2 span {
         font-family: "BebasNeueBook";
         padding-right: 0.4em;
@@ -403,10 +401,10 @@
     margin: 0 -15px; }
     #home .container .tab_name .top {
       text-align: center;
-      font: 3.5em "BebasNeueRegular";
+      font: 5em "BebasNeueRegular";
       color: #595c5f;
-      letter-spacing: 4.5em;
-      padding-left: 4.5em; }
+      letter-spacing: 3em;
+      padding-left: 3em; }
     #home .container .tab_name .tab_names {
       display: -webkit-box;
       display: -webkit-flex;
@@ -448,13 +446,12 @@
 
 @media screen and (min-width: 1520px) {
   #home .container {
-    min-height: 876px;
     overflow: hidden; } }
 
 @media screen and (max-width: 1519px) {
   #home .container .tab_content .moscow_page .tab_content_block h2,
   #home .container .tab_content .spb_page .tab_content_block h2 {
-    padding-top: 6em; } }
+    padding-top: 3em; } }
 
 @media screen and (max-width: 1200px) {
   #home .container {
