--- a/portfolio/Barbershop/app/scss/dop.scss
+++ b/portfolio/Barbershop/app/scss/dop.scss
@@ -2,16 +2,12 @@
     position: relative;
     z-index: 2;
     height: 100%;
-    .container {
-        height: 100vh;
-        min-height: 624px;
-    }
 }
 
 .bg_page_dop {
     width: 100%;
     height: 100%;
-    position: fixed;
+    position: absolute;
     background: url(../img/bg_dop_page.jpg) no-repeat center center;
     background-size: cover;
 }
@@ -199,9 +195,6 @@
       #dop .container .dop_page .center_section h5 {
         margin-bottom: 0.2em;
         margin-top: 0.3em;
-      }
-      #dop .container {
-        min-height: 876px;
       }
 }
 
