--- a/portfolio/Barbershop/app/scss/_media.scss
+++ b/portfolio/Barbershop/app/scss/_media.scss
@@ -90,6 +90,11 @@
 	  #header .container .navigation li {
 	  	margin: 0 10px;
 	  }
+	  #header .container .header_top #lang_block {
+	  	font-size: 2.5px;
+	  	top: 5em;
+	  	right: auto;
+	  }
 }
 
 // ≥576px
