--- a/portfolio/Barbershop/app/scss/_media.scss
+++ b/portfolio/Barbershop/app/scss/_media.scss
@@ -93,12 +93,14 @@
 	  #header .container .header_top #lang_block {
 	  	font-size: 2.5px;
 	  	top: 5em;
-	  	right: auto;
 	  }
 }
 
 // ≥576px
 @media screen and (max-width: 567px) {
+	#header .container .header_top #lang_block {
+	  	right: auto;
+	  }
     #header .container .header_top .right {
     	display: none;
     }
